# asymcat

./: .actrc  .codacy.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CLAUDE.md  DEVELOPER.md  Demonstration of catcoocc.ipynb  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  SECURITY.md  TEMP_VERSIONS  make_report.sh  pip-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: build.yml  release.yml  security.yml
asymcat/: __init__.py  __main__.py  common.py  correlation.py  scorer.py
catcoocc/: __init__.py  __main__.py  dataio.py  scorer.py  scorers.py  utils.py
cooccurran/: __init__.py  dataio.py  measures.py
docs/: Academic_Analysis_Tutorial.ipynb  Academic_Analysis_Tutorial.ipynb.backup  Demo.ipynb  EXAMPLES_WITH_PLOTS.ipynb  EXAMPLES_WITH_PLOTS.ipynb.backup  MATHEMATICAL_FOUNDATIONS.md  Makefile  README.md  Simple_Examples.ipynb  cmudict.sample100.tsv  cmudict.sample1000.tsv  demo.py  galapagos.tsv  generate_readme_plots.py  mushroom-small.tsv  report.md  report.pmd  toy.tsv
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  mathematical-foundations.rst  quickstart.rst  tutorial.rst
resources/: README.md  cmudict.tsv  galapagos.tsv  mushrooms.tsv  pokemon.tsv
scripts/: bump_version.py  setup-local-testing.sh  test-local.sh
src/: __init__.py
src/asymcat/: __init__.py  __main__.py  common.py  correlation.py  scorer.py  utils.py
tests/: README.md  __init__.py  conftest.py  previous_test.py  test_asymcat.py  test_asymcat_modern.py  test_catcoocc.py  test_cooccurran.py
tests/fixtures/: __init__.py  assertions.py  data.py
tests/integration/: __init__.py  test_end_to_end_workflows.py
tests/unit/: __init__.py  test_data_loading.py  test_legacy_compatibility.py  test_score_transformations.py  test_scoring_measures.py
